--- a/config/locales/views/transactions/en.yml
+++ b/config/locales/views/transactions/en.yml
@@ -1,6 +1,10 @@
 ---
 en:
   transactions:
+    create:
+      success: "Transaction created"
+    update:
+      success: "Transaction updated"
     selection_bar:
       edit: Edit
       delete: Delete
