Fix i18n keys for transaction flash messages

--- a/config/locales/views/transactions/en.yml
+++ b/config/locales/views/transactions/en.yml
@@ -2,9 +2,9 @@
 en:
   transactions:
     create:
-      success: "Transaction created"
+      created: "Transaction created"
     update:
-      success: "Transaction updated"
+      updated: "Transaction updated"
     selection_bar:
       edit: Edit
       delete: Delete
