--- a/config/locales/views/layout/fr.yml
+++ b/config/locales/views/layout/fr.yml
@@ -1,12 +1,18 @@
 ---
 fr:
   layouts:
+    application:
+      nav:
+        assistant: Assistant
+        budgets: Budgets
+        home: Accueil
+        reports: Rapports
+        transactions: Transactions
     auth:
       existing_account: Déjà un compte ?
       no_account: Nouveau sur %{product_name} ?
       sign_in: Se connecter
       sign_up: Créer un compte
-      your_account: Votre compte
     shared:
       footer:
         privacy_policy: Politique de confidentialité
