--- a/config/locales/views/settings/hostings/fr.yml
+++ b/config/locales/views/settings/hostings/fr.yml
@@ -3,22 +3,37 @@ fr:
   settings:
     hostings:
       invite_code_settings:
-        description: Chaque nouvel utilisateur qui rejoint votre instance de %{product_name} ne peut le faire qu'avec un code d'invitation
+        description: Contrôlez comment les nouvelles personnes s'inscrivent à votre instance de %{product}.
         email_confirmation_description: Lorsque cette option est activée, les utilisateurs doivent confirmer leur adresse e-mail lors du changement.
         email_confirmation_title: Exiger la confirmation de l'e-mail
         generate_tokens: Générer un nouveau code
         generated_tokens: Codes générés
-        title: Requérir un code d'invitation pour s'inscrire
+        title: Inscription
+        states:
+          open: Ouvert
+          closed: Fermé
+          invite_only: Sur invitation uniquement
       show:
-        general: Services externes
+        general: Paramètres généraux
+        financial_data_providers: Fournisseurs de données financières
+        sync_settings: Paramètres de synchronisation
         invites: Codes d'invitation
         title: Auto-hébergement
         danger_zone: Zone dangereuse
         clear_cache: Effacer le cache de données
-        clear_cache_warning: L'effacement du cache de données supprimera tous les taux de change, les cours des titres, les soldes des comptes et d’autres données. Cela ne supprimera pas les comptes, les transactions, les catégories ou d’autres données possédées par les utilisateurs.
+        clear_cache_warning: L'effacement du cache de données supprimera tous les taux de change, les cours des titres, les soldes des comptes et d'autres données. Cela ne supprimera pas les comptes, les transactions, les catégories ou d'autres données possédées par les utilisateurs.
         confirm_clear_cache:
           title: Effacer le cache de données ?
-          body: Êtes-vous sûr(e) de vouloir effacer le cache de données ? Cela supprimera tous les taux de change, les cours des titres, les soldes des comptes et d’autres données. Cette action ne peut pas être annulée.
+          body: Êtes-vous sûr(e) de vouloir effacer le cache de données ? Cela supprimera tous les taux de change, les cours des titres, les soldes des comptes et d'autres données. Cette action ne peut pas être annulée.
+      provider_selection:
+        title: Sélection du fournisseur
+        description: Choisissez le service à utiliser pour récupérer les taux de change et les cours des titres. Yahoo Finance est gratuit et ne nécessite pas de clé API. Twelve Data nécessite une clé API gratuite mais peut offrir une meilleure couverture des données.
+        exchange_rate_provider_label: Fournisseur de taux de change
+        securities_provider_label: Fournisseur de titres (cours boursiers)
+        env_configured_message: La sélection du fournisseur est désactivée car des variables d'environnement (EXCHANGE_RATE_PROVIDER ou SECURITIES_PROVIDER) sont définies. Pour activer la sélection ici, supprimez ces variables d'environnement de votre configuration.
+        providers:
+          twelve_data: Twelve Data
+          yahoo_finance: Yahoo Finance
       brand_fetch_settings:
         description: Saisissez l'ID client fourni par Brand Fetch
         label: ID client
@@ -33,18 +48,42 @@ fr:
         uri_base_placeholder: "https://api.openai.com/v1 (par défaut)"
         model_label: Modèle (Optionnel)
         model_placeholder: "gpt-4.1 (par défaut)"
+        json_mode_label: Mode JSON
+        json_mode_auto: Auto (recommandé)
+        json_mode_strict: Strict (meilleur pour les modèles de raisonnement)
+        json_mode_none: Aucun (meilleur pour les modèles standard)
+        json_mode_json_object: Objet JSON
+        json_mode_help: "Le mode strict fonctionne mieux avec les modèles de raisonnement (qwen-thinking, deepseek-reasoner). Le mode aucun fonctionne mieux avec les modèles standard (llama, mistral, gpt-oss)."
         title: OpenAI
+      yahoo_finance_settings:
+        title: Yahoo Finance
+        description: Yahoo Finance fournit un accès gratuit aux cours boursiers, taux de change et données financières sans nécessiter de clé API.
+        status_active: Yahoo Finance est actif et fonctionne
+        status_inactive: La connexion à Yahoo Finance a échoué
+        connection_failed: Impossible de se connecter à Yahoo Finance
+        troubleshooting: Vérifiez votre connexion Internet et les paramètres de votre pare-feu. Yahoo Finance peut être temporairement indisponible.
       twelve_data_settings:
-        api_calls_used: "%{used} / %{limit} Appels API journaliers utilisés (%{percentage})"
+        api_calls_used: "%{used} / %{limit} appels API quotidiens utilisés (%{percentage})"
         description: Saisissez la clé API fournie par Twelve Data
         env_configured_message: Configurée avec succès via la variable d'environnement TWELVE_DATA_API_KEY.
         label: Clé API
         placeholder: Entrez votre clé API ici
-        plan: "%{plan} Plan"
+        plan: "Plan %{plan}"
         title: Twelve Data
       update:
         failure: Valeur de paramètre invalide
         success: Paramètres mis à jour
+        invalid_onboarding_state: État d'inscription invalide
+        invalid_sync_time: Format d'heure de synchronisation invalide. Veuillez utiliser le format HH:MM (ex. 02:30).
+        scheduler_sync_failed: Paramètres enregistrés, mais la mise à jour du planning de synchronisation a échoué. Veuillez réessayer ou vérifier les journaux du serveur.
       clear_cache:
-        cache_cleared: Le cache de données a été effacé. Cela peut prendre quelques moments pour être terminé.
+        cache_cleared: Le cache de données a été effacé. Cela peut prendre quelques instants.
       not_authorized: Vous n'êtes pas autorisé(e) à effectuer cette action
+      sync_settings:
+        auto_sync_label: Activer la synchronisation automatique
+        auto_sync_description: Lorsque cette option est activée, tous les comptes seront automatiquement synchronisés quotidiennement à l'heure spécifiée.
+        auto_sync_time_label: Heure de synchronisation (HH:MM)
+        auto_sync_time_description: Spécifiez l'heure à laquelle la synchronisation automatique doit se produire.
+        include_pending_label: Inclure les transactions en attente
+        include_pending_description: Lorsque cette option est activée, les transactions en attente (non confirmées) seront importées et automatiquement réconciliées lors de leur validation. Désactivez si votre banque fournit des données de transactions en attente peu fiables.
+        env_configured_message: Ce paramètre est désactivé car une variable d'environnement du fournisseur (SIMPLEFIN_INCLUDE_PENDING ou PLAID_INCLUDE_PENDING) est définie. Supprimez-la pour activer ce paramètre.
