--- a/config/locales/views/settings/fr.yml
+++ b/config/locales/views/settings/fr.yml
@@ -5,6 +5,7 @@ fr:
       show:
         page_title: Prompts IA
         openai_label: OpenAI
+        disable_ai: Désactiver l'assistant IA
         prompt_instructions: Instructions pour les prompts
         main_system_prompt:
           title: Prompt Système Principal
@@ -85,6 +86,23 @@ fr:
     securities:
       show:
         page_title: Sécurité
+        mfa_title: Authentification à deux facteurs
+        mfa_description: Ajoutez une couche de sécurité supplémentaire à votre compte en exigeant un code de votre application d'authentification lors de la connexion
+        enable_mfa: Activer 2FA
+        disable_mfa: Désactiver 2FA
+        disable_mfa_confirm: Êtes-vous sûr(e) de vouloir désactiver l'authentification à deux facteurs ?
+        sso_title: Comptes connectés
+        sso_subtitle: Gérez vos connexions de compte à authentification unique
+        sso_disconnect: Déconnecter
+        sso_last_used: Dernière utilisation
+        sso_never: Jamais
+        sso_no_email: Pas d'email
+        sso_no_identities: Aucun compte SSO connecté
+        sso_connect_hint: Déconnectez-vous et connectez-vous avec un fournisseur SSO pour connecter un compte.
+        sso_confirm_title: Déconnecter le compte ?
+        sso_confirm_body: Êtes-vous sûr(e) de vouloir déconnecter votre compte %{provider} ? Vous pourrez le reconnecter ultérieurement en vous connectant avec ce fournisseur.
+        sso_confirm_button: Déconnecter
+        sso_warning_message: C'est votre seule méthode de connexion. Vous devriez définir un mot de passe dans vos paramètres de sécurité avant de déconnecter, sinon vous pourriez être bloqué(e) hors de votre compte.
     settings_nav:
       accounts_label: Comptes
       advanced_section_title: Avancé
@@ -101,6 +119,7 @@ fr:
       other_section_title: Plus
       preferences_label: Préférences
       profile_label: Informations du profil
+      recurring_transactions_label: Récurrentes
       rules_label: Règles
       security_label: Sécurité
       self_hosting_label: Auto-hébergement
