fix: Address CodeRabbit review comments
- Remove duplicate translation keys in accounts/en.yml activity section
- Add missing holdings.destroy.cannot_delete key
- Add missing categories.destroy_all.all_deleted key
- Add missing breadcrumbs.home and breadcrumbs.merchants keys
- Replace hardcoded action_verb strings with i18n keys in valuations
- Merge family_merchants locale into merchants locale file

--- a/config/locales/views/categories/en.yml
+++ b/config/locales/views/categories/en.yml
@@ -10,6 +10,8 @@ en:
       success: Category created successfully
     destroy:
       success: Category deleted successfully
+    destroy_all:
+      all_deleted: All categories deleted
     edit:
       edit: Edit category
     form:
