Update activity menu to conditionally display options for linked and investment accounts

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -56,6 +56,7 @@ en:
         entry: entry
         filter: Filter
         new: New
+        new_activity: New activity
         new_balance: New balance
         new_transaction: New transaction
         no_entries: No entries found
