Refactor "New transaction" to "New activity" across UI and tests
- Updated localized strings, button labels, and ARIA attributes.
- Improved error handling in holdings' current price display.
- Scoped fallback queries in `provider_import_adapter` to prevent overwrites.
- Added safeguard for offline securities in price fetching logic.

--- a/config/locales/views/holdings/en.yml
+++ b/config/locales/views/holdings/en.yml
@@ -55,6 +55,7 @@ en:
       delete_subtitle: This will delete the holding and all your associated trades
         on this account.  This action cannot be undone.
       delete_title: Delete holding
+      edit_security: Edit security
       history: History
       no_trade_history: No trade history available for this holding.
       overview: Overview
