Add tax treatment support for accounts, investments, and cryptos

--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -103,6 +103,23 @@ en:
       credit_card: Credit Card
       loan: Loan
       other_liability: Other Liability
+    tax_treatments:
+      taxable: Taxable
+      tax_deferred: Tax-Deferred
+      tax_exempt: Tax-Exempt
+      tax_advantaged: Tax-Advantaged
+    tax_treatment_descriptions:
+      taxable: Gains taxed when realized
+      tax_deferred: Contributions deductible, taxed on withdrawal
+      tax_exempt: Contributions after-tax, gains not taxed
+      tax_advantaged: Special tax benefits with conditions
+    subtype_regions:
+      us: United States
+      uk: United Kingdom
+      ca: Canada
+      au: Australia
+      eu: Europe
+      generic: General
     confirm_unlink:
       title: Unlink account from provider?
       description_html: "You are about to unlink <strong>%{account_name}</strong> from <strong>%{provider_name}</strong>. This will convert it to a manual account."
