--- a/config/locales/views/reports/en.yml
+++ b/config/locales/views/reports/en.yml
@@ -139,6 +139,7 @@ en:
       realized_gains: Realized Gains
       total_gains: Total Gains
       taxable_realized_note: These gains may be subject to taxes
+      no_data: "-"
       view_details: View details
       holdings_count: holdings
       sells_count: sells
