Enhance investment performance translations and optimize holdings lookup logic
- Update `holdings_count` and `sells_count` translations to handle pluralization
- Refactor views to use pluralized translation keys with count interpolation
- Optimize preloaded holdings lookup in `Trade` to ensure deterministic selection using `select` and `max_by`

--- a/config/locales/views/reports/en.yml
+++ b/config/locales/views/reports/en.yml
@@ -141,8 +141,12 @@ en:
       taxable_realized_note: These gains may be subject to taxes
       no_data: "-"
       view_details: View details
-      holdings_count: holdings
-      sells_count: sells
+      holdings_count:
+        one: "%{count} holding"
+        other: "%{count} holdings"
+      sells_count:
+        one: "%{count} sell"
+        other: "%{count} sells"
       holdings: Holdings
       sell_trades: Sell Trades
       and_more: "+%{count} more"
