--- a/config/locales/views/onboardings/nl.yml
+++ b/config/locales/views/onboardings/nl.yml
@@ -22,6 +22,6 @@ nl:
       subtitle: Laten we uw profiel voltooien.
       title: Laten we de basis instellen
     show:
-      message: We zijn erg blij dat je hier bent. In de volgende stap stellen we je een paar vragen om je profiel te voltooien en je helemaal klaar te maken.
+      message: We zijn erg blij dat u hier bent. In de volgende stap stellen we u een paar vragen om uw profiel te voltooien en u helemaal klaar te maken.
       setup: Account instellen
       title: Maak kennis met %{product_name}
